[project]
name = "chatterbox"
version = "0.1.4"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "conformer>=0.3.2",
    "diffusers>=0.35.2",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "resemble-perth>=1.0.1",
    "s3tokenizer>=0.2.0",
    "torchaudio>=2.1.0",
    "torchcodec>=0.8.1",
    "transformers>=4.52.1",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
# Disable everything
extend-exclude=["*"]
